--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.0-beta.1",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.1",
     "redux": "^5.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
